--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Сайт, созданный учеником 2 курса HTML Academy. Cat-energy">
   <meta name="keywords" content="интернет-магазин кошачьей еды, питание для котов, кошачий корм, кошачья еда СПб , Питер, Санкт-Петербург">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="">
+  <link rel="icon" href="#">
   <link rel="icon" type="image/png" sizes="32x32" href="">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="">
@@ -14,7 +14,7 @@
 <body class="page__body">
 <header class="page__header">
   <div class="header container">
-    <a class="logo" href="#">
+    <a class="logo">
       <img class="logo__image" src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
