верстка главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="Сайт, созданный учеником 2 курса HTML Academy. Cat-energy">
   <meta name="keywords" content="интернет-магазин кошачьей еды, питание для котов, кошачий корм, кошачья еда СПб , Питер, Санкт-Петербург">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="#">
-  <link rel="icon" type="image/png" sizes="32x32" href="#">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="#">
 </head>
@@ -27,10 +27,10 @@
           <a class="header-nav__link header-nav__link--active" href="#">Главная</a>
         </li>
         <li class="header-nav__item">
-          <a class="header-nav__link" href="">Каталог продукции</a>
+          <a class="header-nav__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="header-nav__item">
-          <a class="header-nav__link" href="#">Подбор программы</a>
+          <a class="header-nav__link" href="form.html">Подбор программы</a>
         </li>
       </ul>
     </nav>
