верстка главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
 <header class="page__header">
   <div class="header container">
     <a class="logo">
-      <img class="logo__image" src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
       <span class="visually-hidden">Меню.</span>
