--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="интернет-магазин кошачьей еды, питание для котов, кошачий корм, кошачья еда СПб , Питер, Санкт-Петербург">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="#">
 </head>
@@ -16,7 +16,7 @@
 <header class="page__header">
   <div class="header container">
     <a class="logo">
-      <img class="logo__image" src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
       <span class="visually-hidden">Меню.</span>
@@ -128,6 +128,12 @@
 
     <div class="footer__map map">
       <img class="map__image" src="img/footer_location.png" width="640" height="724" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    </div>
+
+    <div class="footer-local-logo local-logo">
+      <a class="local-logo__link" href="https://www.facebook.com/htmlacademy/">
+        <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи." >
+      </a>
     </div>
 
     <nav class="footer-nav container">
