добавляет верстку страницы каталога

--- a/source/form.html
+++ b/source/form.html
@@ -24,18 +24,20 @@
     <nav class="header-nav">
       <ul class="header-nav__list">
         <li class="header-nav__item">
-          <a class="header-nav__link header-nav__link" href="index.html">Главная</a>
+          <a class="header-nav__link" href="index.html">Главная</a>
         </li>
         <li class="header-nav__item">
           <a class="header-nav__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="header-nav__item">
-          <a class="header-nav__link--active" href="#">Подбор программы</a>
+          <a class="header-nav__link header-nav__link--active" href="#">Подбор программы</a>
         </li>
       </ul>
     </nav>
   </div>
 </header>
+
+<main class="page__main">
 
 </body>
 </html>
