--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 
 <header class="page__header">
   <div class="header container">
-    <a class="logo">
+    <a class="logo" href="#">
       <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
@@ -127,17 +127,16 @@
     </div>
 
     <div class="footer__map map">
-      <img class="map__image" src="img/footer_location.png" width="640" height="724" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </div>
 
-    <div class="footer-local-logo local-logo">
-      <a class="local-logo__link" href="https://www.facebook.com/htmlacademy/">
+    <div class="footer-local-logo local-logo container">
+      <a class="local-logo__link" href="#">
         <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи." >
       </a>
     </div>
 
-    <nav class="footer-nav container">
-      <a class="footer-nav__logo" href=""></a>
+    <div class="footer-social container">
       <ul class="social">
         <li class="social__item">
           <a class="social__link" href="https://vk.com/htmlacademy/">
@@ -153,8 +152,9 @@
           </a>
         </li>
       </ul>
-    </nav>
-    <div class="footer-logo">
+    </div>
+
+    <div class="footer-logo container">
       <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
           <path fill="#666666"
