--- a/source/index.html
+++ b/source/index.html
@@ -130,13 +130,13 @@
       <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </div>
 
-    <div class="footer-local-logo local-logo container">
+    <div class="footer__local-logo local-logo container">
       <a class="local-logo__link" href="#">
         <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи." >
       </a>
     </div>
 
-    <div class="footer-social container">
+    <div class="footer__social container">
       <ul class="social">
         <li class="social__item">
           <a class="social__link" href="https://vk.com/htmlacademy/">
@@ -154,7 +154,7 @@
       </ul>
     </div>
 
-    <div class="footer-logo container">
+    <div class="footer__logo footer-logo container">
       <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
           <path fill="#666666"
@@ -162,7 +162,6 @@
         </svg>
       </a>
     </div>
-
   </section>
 
 </footer>
