--- a/source/catalog.html
+++ b/source/catalog.html
@@ -55,7 +55,7 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">700 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product">
@@ -69,7 +69,7 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">1000 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product">
@@ -83,7 +83,7 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">700 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product">
@@ -97,7 +97,7 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">1000 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product">
@@ -111,7 +111,7 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">400 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product">
@@ -125,7 +125,7 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">700 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product">
@@ -139,13 +139,13 @@
           <dt class="product__item">Цена</dt>
           <dd class="product__definition">500 Р.</dd>
         </dl>
-        <a class="buy-link" href="#">Заказать</a>
+        <a class="main-link" href="#">Заказать</a>
       </div>
 
       <div class="product product--more">
         <h3 class="product__title">Показать еще 100500 товаров</h3>
         <p class="product__description">На самом деле вкусов гораздо больше!</p>
-        <a class="buy-link buy-link--discreet" href="#">Показать все</a>
+        <a class="main-link main-link--discreet" href="#">Показать все</a>
       </div>
     </div>
   </section>
@@ -158,7 +158,7 @@
         <dt class="additive__item">1 упаковка (100 г)</dt>
         <dd class="additive__definition">200 Р.</dd>
       </dl>
-      <a class="buy-link" href="#">Заказать</a>
+      <a class="main-link" href="#">Заказать</a>
     </div>
 
     <div class="additive">
@@ -167,7 +167,7 @@
         <dt class="additive__item">5 литров</dt>
         <dd class="additive__definition">50 Р.</dd>
       </dl>
-      <a class="buy-link" href="#">Заказать</a>
+      <a class="main-link" href="#">Заказать</a>
     </div>
 
     <div class="additive">
@@ -176,7 +176,7 @@
         <dt class="additive__item">1 литр</dt>
         <dd class="additive__definition">100 Р.</dd>
       </dl>
-      <a class="buy-link" href="#">Заказать</a>
+      <a class="main-link" href="#">Заказать</a>
     </div>
 
     <div class="additive">
@@ -185,7 +185,7 @@
         <dt class="additive__item">1 упаковка (30 г)</dt>
         <dd class="additive__definition">300 Р.</dd>
       </dl>
-      <a class="buy-link" href="#">Заказать</a>
+      <a class="main-link" href="#">Заказать</a>
     </div>
 
     <aside class="promo container">
@@ -207,40 +207,54 @@
       <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </div>
 
-    <div class="footer__local-logo local-logo container">
-      <a class="local-logo__link" href="index.html">
-        <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи." >
-      </a>
-    </div>
+    <footer class="page__footer footer">
+      <section class="footer__contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <div class="contacts container">
+          <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
 
-    <div class="footer__social container">
-      <ul class="social">
-        <li class="social__item">
-          <a class="social__link" href="https://vk.com/htmlacademy/">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        <li class="social__item">
-          <a class="social__link" href="https://www.instagram.com/htmlacademy/">
-            <span class="visually-hidden">Instagram</span>
-          </a>
-        <li class="social__item">
-          <a class="social__link" href="https://www.facebook.com/htmlacademy/">
-            <span class="visually-hidden">Facebook</span>
-          </a>
-        </li>
-      </ul>
-    </div>
+        <div class="footer__map map">
+          <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </div>
 
-    <div class="footer__logo footer-logo container">
-      <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
-          <path fill="#666666"
-                d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-        </svg>
-      </a>
-    </div>
-  </section>
+        <nav class="footer-nav container">
+          <div class="local-logo">
+            <a class="local-logo__link" href="index.html">
+              <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+            </a>
+          </div>
 
-</footer>
+          <div class="social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link" href="https://vk.com/htmlacademy/">
+                  <span class="visually-hidden">ВКонтакте</span>
+                </a>
+              <li class="social__item">
+                <a class="social__link" href="https://www.instagram.com/htmlacademy/">
+                  <span class="visually-hidden">Instagram</span>
+                </a>
+              <li class="social__item">
+                <a class="social__link" href="https://www.facebook.com/htmlacademy/">
+                  <span class="visually-hidden">Facebook</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-logo">
+            <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
+                <path fill="#666666"
+                      d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+              </svg>
+            </a>
+          </div>
+        </nav>
+      </section>
+
+    </footer>
 </body>
 </html>
