--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
 
 <header class="page__header">
   <div class="header container">
-    <a class="logo">
+    <a class="logo" href="index.html">
       <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
@@ -53,11 +53,11 @@
           </li>
           <li class="form-group__item">
             <label class="form-group__label" for="cat-weight">Вес (кг):<sup>*</sup></label>
-            <input class="form-group__input" type="number" name="cat-weight" id="cat-weight" min="1" value="7" required>
+            <input class="form-group__input" type="number" name="cat-weight" id="cat-weight" min="1" max="25" value="7" required>
           </li>
           <li class="form-group__item">
             <label class="form-group__label" for="cat-age">Возраст (лет):<sup>*</sup></label>
-            <input class="form-group__input" type="number" name="cat-age" id="cat-age" min="1" step="0.5" value="7" required>
+            <input class="form-group__input" type="number" name="cat-age" id="cat-age" min="1" max="25" step="0.5" value="7" required>
           </li>
         </ul>
       </fieldset>
@@ -123,7 +123,7 @@
       </fieldset>
 
       <div class="form-submit">
-      <button class="main-button" type="submit">Отправить заявку</button>
+      <button class="main-link" type="submit">Отправить заявку</button>
         <span class="form__span"><sup>*</sup> &mdash; Обязательные поля</span>
       </div>
 
@@ -143,38 +143,40 @@
       <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </div>
 
-    <div class="footer__local-logo local-logo container">
-      <a class="local-logo__link" href="index.html">
-        <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
-      </a>
-    </div>
+    <nav class="footer-nav container">
+      <div class="local-logo">
+        <a class="local-logo__link" href="index.html">
+          <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+        </a>
+      </div>
 
-    <div class="footer__social container">
-      <ul class="social">
-        <li class="social__item">
-          <a class="social__link" href="https://vk.com/htmlacademy/">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        <li class="social__item">
-          <a class="social__link" href="https://www.instagram.com/htmlacademy/">
-            <span class="visually-hidden">Instagram</span>
-          </a>
-        <li class="social__item">
-          <a class="social__link" href="https://www.facebook.com/htmlacademy/">
-            <span class="visually-hidden">Facebook</span>
-          </a>
-        </li>
-      </ul>
-    </div>
+      <div class="social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link" href="https://vk.com/htmlacademy/">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          <li class="social__item">
+            <a class="social__link" href="https://www.instagram.com/htmlacademy/">
+              <span class="visually-hidden">Instagram</span>
+            </a>
+          <li class="social__item">
+            <a class="social__link" href="https://www.facebook.com/htmlacademy/">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+        </ul>
+      </div>
 
-    <div class="footer__logo footer-logo container">
-      <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
-          <path fill="#666666"
-                d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-        </svg>
-      </a>
-    </div>
+      <div class="footer-logo">
+        <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
+            <path fill="#666666"
+                  d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+          </svg>
+        </a>
+      </div>
+    </nav>
   </section>
 
 </footer>
