добавляет верстку всех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -107,8 +107,9 @@
         <div class="demo-slider__controls control">
           <button class="control__button" type="button">Было</button>
           <div class="control__bar">
-            <input class="control__range" type = "range" id="control__range" min="0" max="100" value ="10">
-            <label class="visually-hidden" for="control__range" >Слайдер до применения Кэт-энерджи и после</label>
+            <button class="control__range">
+              <span class="visually-hidden">Кнопка слайдера</span>
+            </button>
           </div>
           <button class="control__button" type="button">Стало</button>
         </div>
