добавляет верстку всех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -105,13 +105,15 @@
         </div>
 
         <div class="demo-slider__controls control">
-          <button class="control__button" type="button">Было</button>
-          <div class="control__bar">
-            <button class="control__range">
-              <span class="visually-hidden">Кнопка слайдера</span>
-            </button>
+          <button class="control__button control__button--before" type="button">Было</button>
+          <div class="control__scale">
+            <div class="control__bar">
+              <button class="control__range">
+                <span class="visually-hidden">Кнопка слайдера</span>
+              </button>
+            </div>
           </div>
-          <button class="control__button" type="button">Стало</button>
+          <button class="control__button control__button--after" type="button">Стало</button>
         </div>
       </div>
     </section>
