исправляет замечания после проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,8 @@
 <header class="page__header">
   <div class="header container">
     <a class="logo" href="index.html">
-      <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
       <span class="visually-hidden">Меню.</span>
@@ -27,7 +28,7 @@
           <a class="header-nav__link" href="index.html">Главная</a>
         </li>
         <li class="header-nav__item">
-          <a class="header-nav__link header-nav__link--active" href="#">Каталог продукции</a>
+          <a class="header-nav__link header-nav__link--active">Каталог продукции</a>
         </li>
         <li class="header-nav__item">
           <a class="header-nav__link" href="form.html">Подбор программы</a>
@@ -195,18 +196,6 @@
   </section>
 </main>
 
-<footer class="page__footer footer">
-  <section class="footer__contacts">
-    <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts container">
-      <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    </div>
-
-    <div class="footer__map map">
-      <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-    </div>
-
     <footer class="page__footer footer">
       <section class="footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
@@ -222,7 +211,7 @@
         <nav class="footer-nav container">
           <div class="local-logo">
             <a class="local-logo__link" href="index.html">
-              <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+              <img class="local-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
             </a>
           </div>
 
