--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,8 @@
 <header class="page__header">
   <div class="header container">
     <a class="logo" href="#">
-      <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
       <span class="visually-hidden">Меню.</span>
@@ -24,7 +25,7 @@
     <nav class="header-nav ">
       <ul class="header-nav__list">
         <li class="header-nav__item">
-          <a class="header-nav__link header-nav__link--active" href="#">Главная</a>
+          <a class="header-nav__link header-nav__link--active">Главная</a>
         </li>
         <li class="header-nav__item">
           <a class="header-nav__link" href="catalog.html">Каталог продукции</a>
@@ -38,17 +39,16 @@
 </header>
 
 <main class="page__main">
-  <h1 class="visually-hidden">Магазин здорового питания для котиков "Cat Energy"</h1>
-
+  <h1 class="promo__title">Функциональное питание для котов</h1>
   <article class="promo container">
-    <h2 class="promo__title">Функциональное питание для котов</h2>
+    <h2 class="visually-hidden">Здоровый образ жизни для человека и кота!</h2>
     <p class="promo__text">Занялся собой? Займись котом!</p>
     <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
     <a class="main-link" href="form.html">Подобрать программу</a>
   </article>
 
   <article class="health-programs">
-    <h2 class="health-programs__title visually-hidden">Программы здорового питания для Вашего котика</h2>
+    <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
     <section class="program program--slim">
       <h3 class="program__title">Похудение</h3>
       <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
@@ -135,7 +135,7 @@
     <nav class="footer-nav container">
       <div class="local-logo">
         <a class="local-logo__link" href="#">
-          <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+          <img class="local-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
         </a>
       </div>
 
