правит замечания по 3 разделу

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -194,6 +194,7 @@
               <span class="product__category">Цена</span>
               <b class="product__value">500 Р.</b>
             </li>
+          </ul>
         </div>
         <a class="product__button main-link" href="#">Заказать</a>
       </div>
@@ -274,8 +275,8 @@
     <nav class="footer-nav">
       <div class="footer-inner container">
         <div class="footer-logo">
-          <a class="footer-logo__link" href="index.html"
-            <img class="footer-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+          <a class="footer-logo__link" href="index.html">
+          <img class="footer-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
           </a>
         </div>
 
