--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
       <h1 class="promo__title">Функциональное питание для котов</h1>
       <p class="promo__text">Занялся собой? Займись котом!</p>
       <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
-      <a class="main-link" href="form.html">Подобрать программу</a>
+      <a class="promo__button main-link" href="form.html">Подобрать программу</a>
     </div>
   </article>
 
@@ -89,23 +89,25 @@
             <b class="demo-cat__importance">60 дней</b>
             <p class="demo-cat__description">затрачено времени</p>
           </li>
+          <li class="demo-cat__item demo-cat__item--wide">
+            <p class="demo-cat__expenses">Затраты на питание:
+              <span class="demo-cat__cost">15000 руб.</span>
+            </p>
+          </li>
         </ul>
-        <p class="demo-cat__expenses">Затраты на питание:
-          <span class="demo-cat__cost">15000 руб.</span>
-        </p>
       </div>
 
       <div class="demo-slider">
-        <div class="demo-slider__images slider-images">
-          <div class="slider-cat slider-cat--before">
-            <img class="slider-cat__image slider-cat__image--before" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
+        <div class="slider-images">
+          <div class="slider-images__cat slider-images__cat--before">
+            <img class="slider-images__image slider-images__image--fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
           </div>
-          <div class="slider-cat slider-cat--after visually-hidden">
-            <img class="slider-cat__image slider-cat__image--before" src="img/slider_cat-skinny.png" width="243" height="232" alt="кот после курса cat-energy.">
+          <div class="slider-images__cat slider-images__cat--after visually-hidden">
+            <img class="slider-images__image slider-images__image--skinny" src="img/slider_cat-skinny.png" width="243" height="232" alt="кот после курса cat-energy.">
           </div>
         </div>
 
-        <div class="demo-slider__controls control">
+        <div class="control">
           <button class="control__button control__button--before" type="button">Было</button>
           <div class="control__scale">
             <div class="control__bar">
@@ -174,7 +176,7 @@
           </ul>
         </div>
 
-        <a class="academy__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#666666"
                   d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
