--- a/source/index.html
+++ b/source/index.html
@@ -102,6 +102,9 @@
           <div class="slider-images__cat slider-images__cat--before">
             <img class="slider-images__image slider-images__image--fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
           </div>
+          <div class="slider-images__cat slider-images__cat--static">
+            <img class="slider-images__image slider-images__image--static" src="img/index_cat-slider@1x.png" width="592" height="511" alt="слайдер в половинном состоянии.">
+          </div>
           <div class="slider-images__cat slider-images__cat--after visually-hidden">
             <img class="slider-images__image slider-images__image--skinny" src="img/slider_cat-skinny.png" width="243" height="232" alt="кот после курса cat-energy.">
           </div>
