адаптивные сетки каталога

--- a/source/form.html
+++ b/source/form.html
@@ -46,7 +46,7 @@
 
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="form__section">
-        <fieldset class="form__group form__group--cat-info">
+        <fieldset class="form-group form-group--cat-info">
           <legend class="visually-hidden">Информация о Вашем котике</legend>
           <ul class="form-group__list form-group__list--cat-info">
             <li class="form-group__item">
@@ -64,7 +64,7 @@
           </ul>
         </fieldset>
 
-        <fieldset class="form__group form__group--purpose">
+        <fieldset class="form-group form-group--purpose">
           <legend class="visually-hidden">Цель программы</legend>
           <ul class="form-group__list form-group__list--purpose">
             <li class="form-group__item form-group__item--radio">
@@ -83,7 +83,7 @@
         </fieldset>
       </div>
 
-      <fieldset class="form__group form__group--master">
+      <fieldset class="form-group form-group--master">
         <legend class="form-group__legend">Контактные данные (владельца кота)</legend>
         <ul class="form-group__list form-group__list--master">
           <li class="form-group__item">
@@ -97,13 +97,13 @@
         </ul>
       </fieldset>
 
-      <fieldset class="form__group form__group--comment">
+      <fieldset class="form-group form-group--comment">
         <legend class="form-group__legend">Комментарий</legend>
         <label class="visually-hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
         <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment" placeholder="Расскажите обо всех повАдках кота"></textarea>
       </fieldset>
 
-      <fieldset class="form__group form__group--add">
+      <fieldset class="form-group form-group--add">
         <legend class="form-group__legend">Дополнительно</legend>
         <ul class="form-group__list form-group__list--add">
           <li class="form-group__item">
