--- a/source/catalog.html
+++ b/source/catalog.html
@@ -209,63 +209,78 @@
 
   <section class="additives container">
     <h2 class="additives__title">Дополнительные товары</h2>
-    <div class="additive">
-      <h3 class="additive__title">Сахарозаменитель</h3>
-      <ul class="additive__list">
-        <li class="additive__item">
-          <span class="additive_amount">1 упаковка (100 г)</span>
-          <b class="additive_count">200 Р.</b>
-        </li>
-      </ul>
+    <div class="additive-outer">
+      <div class="additive">
+        <h3 class="additive__title">Сахарозаменитель</h3>
+        <ul class="additive__list">
+          <li class="additive__item">
+            <span class="additive_amount">1 упаковка (100 г)</span>
+            <b class="additive_count">200 Р.</b>
+          </li>
+        </ul>
+      </div>
       <a class="main-link" href="#">Заказать</a>
     </div>
 
-    <div class="additive">
-      <h3 class="additive__title">Питьевая вода</h3>
-      <ul class="additive__list">
-        <li class="additive__item">
-          <span class="additive_amount">5 литров</span>
-          <b class="additive_count">50 Р.</b>
-        </li>
-      </ul>
+    <div class="additive-outer">
+      <div class="additive">
+        <h3 class="additive__title">Питьевая вода</h3>
+        <ul class="additive__list">
+          <li class="additive__item">
+            <span class="additive_amount">5 литров</span>
+            <b class="additive_count">50 Р.</b>
+          </li>
+        </ul>
+      </div>
       <a class="main-link" href="#">Заказать</a>
+
     </div>
 
-    <div class="additive">
-      <h3 class="additive__title">Молоко</h3>
-      <ul class="additive__list">
-        <li class="additive__item">
-          <span class="additive_amount">1 литр</span>
-          <b class="additive_count">100 Р.</b>
-        </li>
-      </ul>
+    <div class="additive-outer">
+      <div class="additive">
+        <h3 class="additive__title">Молоко</h3>
+        <ul class="additive__list">
+          <li class="additive__item">
+            <span class="additive_amount">1 литр</span>
+            <b class="additive_count">100 Р.</b>
+          </li>
+        </ul>
+      </div>
       <a class="main-link" href="#">Заказать</a>
+
     </div>
 
-    <div class="additive">
-      <h3 class="additive__title">Витамины</h3>
-      <ul class="additive__list">
-        <li class="additive__item">
-          <span class="additive_amount">1 упаковка (30 г)</span>
-          <b class="additive_count">300 Р.</b>
-        </li>
-      </ul>
+    <div class="additive-outer">
+      <div class="additive">
+        <h3 class="additive__title">Витамины</h3>
+        <ul class="additive__list">
+          <li class="additive__item">
+            <span class="additive_amount">1 упаковка (30 г)</span>
+            <b class="additive_count">300 Р.</b>
+          </li>
+        </ul>
+      </div>
       <a class="main-link" href="#">Заказать</a>
+
     </div>
+
 
     <aside class="stock container">
       <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
       <p class="stock__description">Закажите все и получите чехол для кота в подарок!</p>
     </aside>
+    </div>
   </section>
 </main>
 
 <footer class="page__footer footer">
   <section class="footer__contacts">
     <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts container">
-      <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    <div class="contacts-outer contacts-outer--dark">
+      <div class="contacts container">
+        <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
     </div>
 
     <div class="footer__map map">
@@ -276,7 +291,7 @@
       <div class="footer-inner container">
         <div class="footer-logo">
           <a class="footer-logo__link" href="index.html">
-          <img class="footer-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+            <img class="footer-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
           </a>
         </div>
 
@@ -313,7 +328,7 @@
           </ul>
         </div>
 
-        <a class="academy__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#666666"
                   d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
